# ESP32-S3-gauge

./: .gitignore  CMakeLists.txt  README.md  esp32-s3-gauge.code-workspace  lvgl-ui.code-workspace  sdkconfig.defaults
lvgl-ui/: README.md  c_dev_esp32_s3_gauge_lvgl_ui_gen.c  file_list_gen.cmake  globals.xml
lvgl-ui/main/: main.c
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
main/app/: gauge_metrics.h  sensor_service.c  sensor_service.h
main/board/: board_display.c  board_display.h  board_exio.c  board_exio.h  board_i2c.c  board_i2c.h  board_touch.c  board_touch.h
main/sensors/: lps22hb.c  lps22hb.h  qmi8658.c  qmi8658.h
main/ui/: dashboard_ui.c  dashboard_ui.h
main/ui/editor/: editor_ui.h  editor_ui_generated.c  editor_ui_stub.c
tools/: import_ui.ps1
ui/: CMakeLists.txt  c_dev_esp32_s3_gauge_lvgl_ui.h  c_dev_esp32_s3_gauge_lvgl_ui_gen.c  component_lib_list_gen.cmake  globals.xml
ui/backups/ui_custom_backup_20260228_192028/: c_dev_esp32_s3_gauge_lvgl_ui.c  component_lib_list_gen.cmake  file_list_gen.cmake  project.xml
ui/backups/ui_custom_backup_20260228_192028/main/: idf_component.yml
ui/backups/ui_custom_backup_20260228_192028/screens/: dashboard.xml
ui/main/: CMakeLists.txt
ui/screens/: dashboard.xml  dashboard_round_backup.xml  elements.xml  speedo_daily.xml  speedo_splash.xml  speedo_startup.xml  speedo_track.xml
